--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name":"platformer",
-  "version":"0.0.1",
-  "description": "My first platformer",
+  "name": "overlord",
+  "version": "0.0.2-6",
+  "description": "Overlord Tower Defense",
   "homepage": "",
   "author": "Keith Weiss",
   "engines": {
-      "node": "0.8.2"
-    , "npm" : "1.1.36"
+    "node": "0.8.x",
+    "npm": "1.1.36"
   },
   "dependencies": {
-     "connect": "1.8.5"
-    ,"express": "3.0.0rc4"
-    ,"socket.io": "0.6.16"
-    ,"jade": "0.26.0"
+    "connect": "1.8.5",
+    "express": "3.0.0",
+    "socket.io": "0.6.16",
+    "jade": "0.26.0"
+  },
+  "subdomain": "wootoverlord",
+  "scripts": {
+    "start": "./web.js"
   }
 }
